# internal/web/handlers.go
@@ -39,6 +39,8 @@ func (h *Handler) Mount(r chi.Router) {
 	r.Get("/", h.overview)
 	r.Get("/series", h.seriesList)
 	r.Get("/series/list-live", h.seriesListLive)
+	r.Get("/series/ids", h.seriesIDsJSON)
+	r.Post("/series/bulk-metadata-common", h.seriesBulkMetadataCommonJSON)
 	r.Get("/series/error-count.json", h.seriesErrorCountJSON)
 	r.Get("/series/add", h.seriesAdd)
 	r.Get("/series/{id}", h.seriesDetail)
@@ -89,6 +91,10 @@ func (h *Handler) Mount(r chi.Router) {
 
 	r.Post("/actions/add-series", h.actionAddSeries)
 	r.Post("/actions/update-series", h.actionUpdateSeries)
+	r.Post("/actions/bulk-edit-series", h.actionBulkEditSeries)
+	r.Post("/actions/bulk-edit-series-metadata", h.actionBulkEditSeriesMetadata)
+	r.Post("/actions/bulk-set-series-monitored", h.actionBulkSetSeriesMonitored)
+	r.Post("/actions/bulk-delete-series", h.actionBulkDeleteSeries)
 	r.Post("/actions/save-series-metadata", h.actionSaveSeriesMetadata)
 	r.Post("/actions/series-metadata-prefetch", h.actionSeriesMetadataPrefetch)
 	r.Post("/actions/save-video-metadata", h.actionSaveVideoMetadata)
